--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "files": [
+        "/static/experiences/designer_farmer/rapport.pdf"
+    ],
   "dependencies": {
     "three": "^0.137.5"
   },
